@@ -8,6 +8,14 @@ dependencies {
     compile 'io.reactivex:rxclojure:1.0.0-rc.1'
 
     compile 'joda-time:joda-time:2.4' // pig needs this to run locally
-    provided 'org.apache.pig:pig:0.11.1'
+    provided 'org.apache.pig:pig:0.13.0'
     provided 'org.apache.hadoop:hadoop-core:1.1.2'
+
+    testCompile 'org.apache.pig:pigunit:0.11.1'
+    testCompile 'jline:jline:0.9.94'
+	testCompile 'org.antlr:antlr:3.5.2'
+}
+
+test {
+    jvmArgs += [ "-XX:MaxPermSize=512m" ]
 }
